syntax = "proto3";

service UsersService {
  rpc Login(Credentials) returns (UserId) {}
  rpc CreateUser(NewUser) returns (Result) {}
  rpc GetUser(UserId) returns (User) {}
  rpc UpdateField(UpdateUserInfo) returns (Result) {}
  rpc RemoveUser(UserId) returns (Result) {}
  rpc CreateLikedPost(LikedPost) returns (Result) {}
  rpc DeleteLikedPost(LikedPost) returns (Result) {}
  rpc GetLikedPosts(SnakeUserId) returns (LikedPosts) {}
  rpc SendSMS(SendSMSInfo) returns (Result) {}
  rpc ValidateSMSCode(ValidateInfo) returns (Result) {}
}

message SendSMSInfo {
  string phone = 1;
  string recaptcha_token = 2;
}

message ValidateInfo {
  string phone = 1;
  string code = 2;
}

message Credentials {
  string phone = 1;
  string password = 2;
}

message UserId {
  int32 id = 1;
}

message SnakeUserId {
  int32 user_id = 1;
}

message Result { 
  string data = 1;
}

message LikedPost {
  int32 user_id = 1;
  int32 post_id = 2;
}

message LikedPosts {
  repeated LikedPost posts = 1;
}

message NewUser {
  string name = 1;
  string surname = 2;
  string email = 3;
}

message User {
  string id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  string created_at = 5;
  string updated_at = 6;
}

message UpdateUserInfo {
  string fieldname = 1;
  string value = 2;
  int32 id = 3;
}
